--- a/README
+++ b/README
@@ -1,1 +1,22 @@
+James S. Graydon
+[](https://github.com/jsgraydon/jsgraydon.github.io/blob/main/Profile_Headshot_JSG_2.jpg?raw=true)
+=====
 
+## About me
+I am a scientist in rare-disease pharma and a Master's student at Columbia. 
+
+## Experience
+* **Alexion, AstraZeneca Rare Disease Unit** *2018 – present*
+* **Syntimmune, Inc.** *2017 – 2018*
+* **Genomas, Inc.** *2015 – 2017*
+
+## Expertise
+* R-based data analysis
+..* tidyverse
+..* Clinical data analysis
+..* Data visualization
+..* R Markdown 
+* NONMEM
+* pyDarwin-based ML
+* Clinical trial design and execution
+* Preclinical, Phase 1, Phase 2, Post-Marketing
